feat: Implementacion de la toolbar

--- a/index.html
+++ b/index.html
@@ -3,8 +3,22 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>LibreLocus</title>
+    <link rel="stylesheet" href="css/style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400&display=swap" rel="stylesheet">
 </head>
+<header>
+    <div class="topnav">
+        <img src="img/logo.jpeg" alt="logo" class="toolbar-logo">
+        <a href="#inicio">Inicio</a>
+        <a href="#servicios">Servicios</a>
+        <a href="#about">About Us</a>
+        <a href="#about">Contactenos</a>
+        <button class="nav-button">Inicar sesion</button>
+        <button class="nav-button">Registrarse</button>
+      </div>
+     
+</header>
 <body>
     
 </body>
