feature: Implementacion de los containers del inicio

--- a/index.html
+++ b/index.html
@@ -16,10 +16,15 @@
         <a href="#about">Contactenos</a>
         <button class="nav-button">Inicar sesion</button>
         <button class="nav-button">Registrarse</button>
-      </div>
-     
+      </div>  
 </header>
 <body>
+    <div class="container-inicio">
+    <div class="inicio-izquierda">
+        <img class="imagen-container-izquierda" src="img/Imagen.jpeg" alt="logo">
+    </div>
+    <div class="inicio-derecha"></div>
+    </div>
     
 </body>
 </html>
