refactor: Implemenacion de diseño responsive

--- a/index.html
+++ b/index.html
@@ -11,15 +11,19 @@
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <header>
-    <div class="topnav">
+    <div class="topnav" id="myTopnav">
         <img src="img/logo.jpeg" alt="logo" class="toolbar-logo">
+        <a href="javascript:void(0);" class="icon" onclick="myFunction()">
+            <i class="fa fa-bars"></i>
+          </a>
         <a href="#inicio">Inicio</a>
         <a href="#servicios">Servicios</a>
         <a href="#about">About Us</a>
         <a href="#about">Contactenos</a>
-        <button class="nav-button">Inicar sesion</button>
+        <button class="nav-button">Iniciar sesion</button>
         <button class="nav-button">Registrarse</button>
       </div>  
 </header>
@@ -69,6 +73,6 @@
 
     </div>
     </div>
-    
+    <script src="js/main.js"></script>
 </body>
 </html>
