feat: implementacion de la pantalla de servicios

--- a/index.html
+++ b/index.html
@@ -37,10 +37,10 @@
             <h1>Literarios</h1>
         </div>
         <div class="centered-content">
-            <p2>Hacer mas facil el acceso a la lectura</p2>
+            <p2 class="p2">Hacer mas facil el acceso a la lectura</p2>
         </div>
         <div class="centered-content">
-            <button class="nav-button nav-button-variant">Ver mas</button>
+            <button class="nav-button nav-button-variant ">Ver mas</button>
         </div>
     </div>
     <div class="inicio-derecha">
@@ -71,6 +71,32 @@
             </a>
         </div>
 
+    </div>
+    </div>
+    <div class="container-servicios">
+     <img src="img/logo.jpeg" class="servicios-logo" alt="logo">
+     <div class="text-container">
+        <h2>Nuestros Servicios</h2>
+    </div>
+    <div class="descripcion-container">
+        <p class="p2">LibreLocus es una startup la cual busca promover la lectura con una solucion innovadora.</p2>
+        <p class="p2">Una plataforma comoda, eficiente y efectiva para hacer de la lectura una actividad mas sencilla</p2>
+    </div>
+    <div class="servicios-content">
+        <img src="img/servicios.jpeg" class="servicios-imagen" alt="imagen">
+        <ul>
+            <li>Acceso a una gran cantidad de libros</li>
+            <li>Recomendaciones personalizadas</li>
+            <li>Facilidad de uso</li>
+            <li>Acceso a una gran cantidad de libros</li>
+            <li>Recomendaciones personalizadas</li>
+            <li>Facilidad de uso</li>
+        </ul>
+    
+    </div>
+    <div class="servicios-content">
+        <button class="nav-button">Unirse ya!</button>
+    </div>
     </div>
     </div>
     <script src="js/main.js"></script>
