feat: implementacion de la pantalla de funciones

--- a/index.html
+++ b/index.html
@@ -128,7 +128,36 @@
         </div>
     </div> 
 
+    <div class="container-funciones">
+        <h2>Funciones</h2>
+        <div class="cards-container">
+            <div class="card">
+                <img src="img/funcion1.jpeg" alt="Descripción de la imagen">
+                <p class="subtitulo">Poder ubicar Establecimientos  cercanos por medio de Maps</p>
+                <p class="p1">Solo se consideran establecimientos registrados a los que se podra acceder a su informacion.</p>
+                <p class="texto-expandible" class="p1">Texto expandibleeeeeeeeeeeeeee</p>
+                <p class="boton-expandir">Leer mas</p>
+            </div>
+            <div class="card">
+                <img src="img/funcion1.jpeg" alt="Descripción de la imagen">
+                <p class="subtitulo">Poder ubicar Establecimientos  cercanos por medio de Maps</p>
+                <p class="p1">Solo se consideran establecimientos registrados a los que se podra acceder a su informacion.</p>
+                <p class="texto-expandible" class="p1">Texto expandibleeeeeeeeeeeeeee</p>
+                <p class="boton-expandir">Leer mas</p>
+            </div>
+            <div class="card">
+                <img src="img/funcion1.jpeg" alt="Descripción de la imagen">
+                <p class="subtitulo">Poder ubicar Establecimientos  cercanos por medio de Maps</p>
+                <p class="p1">Solo se consideran establecimientos registrados a los que se podra acceder a su informacion.</p>
+                <p class="texto-expandible" class="p1">Texto expandibleeeeeeeeeeeeeee</p>
+                <p class="boton-expandir">Leer mas</p>
+            </div>
+        </div>
+        <div class="cards-container">
+            <button class="nav-button">Ver mas</button>
+        </div>
 
+    </div>
      
     <script src="js/main.js"></script>
 </body>
