refactor: actulizacion de la estrucutura del proyecto

--- a/index.html
+++ b/index.html
@@ -4,9 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>LibreLocus</title>
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="public/assets/styles/style.css">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400&display=swap" rel="stylesheet">
- 
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
@@ -134,22 +133,22 @@
             <div class="card">
                 <img src="img/funcion1.jpeg" alt="Descripción de la imagen">
                 <p class="subtitulo">Poder ubicar Establecimientos  cercanos por medio de Maps</p>
-                <p class="p1">Solo se consideran establecimientos registrados a los que se podra acceder a su informacion.</p>
-                <p class="texto-expandible" class="p1">Texto expandibleeeeeeeeeeeeeee</p>
+                <p class="p2">Solo se consideran establecimientos registrados a los que se podra acceder a su informacion.</p>
+                <p class="texto-expandible p2">Texto expandibleeeeeeeeeeeeeee</p>
                 <p class="boton-expandir">Leer mas</p>
             </div>
             <div class="card">
                 <img src="img/funcion1.jpeg" alt="Descripción de la imagen">
                 <p class="subtitulo">Poder ubicar Establecimientos  cercanos por medio de Maps</p>
-                <p class="p1">Solo se consideran establecimientos registrados a los que se podra acceder a su informacion.</p>
-                <p class="texto-expandible" class="p1">Texto expandibleeeeeeeeeeeeeee</p>
+                <p class="p2">Solo se consideran establecimientos registrados a los que se podra acceder a su informacion.</p>
+                <p class="texto-expandible p2">Texto expandibleeeeeeeeeeeeeee</p>
                 <p class="boton-expandir">Leer mas</p>
             </div>
             <div class="card">
                 <img src="img/funcion1.jpeg" alt="Descripción de la imagen">
                 <p class="subtitulo">Poder ubicar Establecimientos  cercanos por medio de Maps</p>
-                <p class="p1">Solo se consideran establecimientos registrados a los que se podra acceder a su informacion.</p>
-                <p class="texto-expandible" class="p1">Texto expandibleeeeeeeeeeeeeee</p>
+                <p class="p2">Solo se consideran establecimientos registrados a los que se podra acceder a su informacion.</p>
+                <p class="texto-expandible p2">Texto expandibleeeeeeeeeeeeeee</p>
                 <p class="boton-expandir">Leer mas</p>
             </div>
         </div>
@@ -157,6 +156,6 @@
             <button class="nav-button">Ver mas</button>
         </div>
 
-    <script src="js/main.js"></script>
+    <script src="public/assets/scripts/main.js"></script>
 </body>
 </html>
