fix: correccion de las rutas de los archivos

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 </head>
 <header>
     <div class="topnav" id="myTopnav">
-        <img src="img/logo.jpeg" alt="logo" class="toolbar-logo">
+        <img src="public/assets/images/logo.jpeg" alt="logo" class="toolbar-logo">
         <a href="javascript:void(0);" class="icon" onclick="myFunction()">
             <i class="fa fa-bars"></i>
           </a>
@@ -29,7 +29,7 @@
 <body>
     <div class="container-inicio">
     <div class="inicio-izquierda">
-        <img class="imagen-container-izquierda" src="img/Imagen.jpeg" alt="logo">
+        <img class="imagen-container-izquierda" src="public/assets/images/Imagen.jpeg" alt="logo">
         <div class="centered-content">
             <h1>Descubre nuevos</h1>
             <h1>Mundos</h1>
@@ -51,13 +51,13 @@
             </ol>
             <div class="carousel-inner">
                 <div class="carousel-item active imagen-carrusel">
-                    <img src="img/carrusel1.jpeg" class="d-block w-100" alt="...">
+                    <img src="public/assets/images/carrusel1.jpeg" class="d-block w-100" alt="...">
                 </div>
                 <div class="carousel-item imagen-carrusel">
-                    <img src="img/carrusel2.jpg" class="d-block w-100" alt="...">
+                    <img src="public/assets/images/carrusel2.jpg" class="d-block w-100" alt="...">
                 </div>
                 <div class="carousel-item imagen-carrusel">
-                    <img src="img/carrusel3.jpg" class="d-block w-100" alt="...">
+                    <img src="public/assets/images/carrusel3.jpg" class="d-block w-100" alt="...">
                 </div>
             </div>
             <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
@@ -73,7 +73,7 @@
     </div>
     </div>
     <div class="container-servicios">
-     <img src="img/logo.jpeg" class="servicios-logo" alt="logo">
+     <img src="public/assets/images/logo.jpeg" class="servicios-logo" alt="logo">
      <div class="text-container">
         <h2>Nuestros Servicios</h2>
     </div>
@@ -82,7 +82,7 @@
         <p class="p2">Una plataforma comoda, eficiente y efectiva para hacer de la lectura una actividad mas sencilla</p2>
     </div>
     <div class="servicios-content">
-        <img src="img/servicios.jpeg" class="servicios-imagen" alt="imagen">
+        <img src="public/assets/images/servicios.jpeg" class="servicios-imagen" alt="imagen">
         <ul>
             <li>Acceso a una gran cantidad de libros</li>
             <li>Recomendaciones personalizadas</li>
@@ -91,7 +91,6 @@
             <li>Recomendaciones personalizadas</li>
             <li>Facilidad de uso</li>
         </ul>
-    
     </div>
     <div class="servicios-content">
         <button class="nav-button">Unirse ya!</button>
@@ -113,39 +112,39 @@
     <div class="franja-about">
     </div>
     <div class="contenedor-imagen">
-        <img src="img/imagen-about.jpeg" class="imagen-about" alt="imagen">
+        <img src="public/assets/images/imagen-about.jpeg" class="imagen-about" alt="imagen">
     </div>
-  
+
     </div>
     <div class="plataformas-container">
         <h2>plataformas</h2>
         <div class="imagen-plataformas">
-            <img src="img/Imagen.jpeg" alt="img">
-            <img src="img/google-logo.png" alt="logo">
-            <img src="img/appstore-logo.png" alt="appstore-logo">
-            <img src="img/qr.jpg" alt="">
+            <img src="public/assets/images/Imagen.jpeg" alt="img">
+            <img src="public/assets/images/google-logo.png" alt="logo">
+            <img src="public/assets/images/appstore-logo.png" alt="appstore-logo">
+            <img src="public/assets/images/qr.jpg" alt="">
         </div>
-    </div>      
-    
+    </div> 
+
     <div class="container-funciones">
         <h2>Funciones</h2>
         <div class="cards-container">
             <div class="card">
-                <img src="img/funcion1.jpeg" alt="Descripción de la imagen">
+                <img src="public/assets/images/funcion1.jpeg" alt="Descripción de la imagen">
                 <p class="subtitulo">Poder ubicar Establecimientos  cercanos por medio de Maps</p>
                 <p class="p2">Solo se consideran establecimientos registrados a los que se podra acceder a su informacion.</p>
                 <p class="texto-expandible p2">Texto expandibleeeeeeeeeeeeeee</p>
                 <p class="boton-expandir">Leer mas</p>
             </div>
             <div class="card">
-                <img src="img/funcion1.jpeg" alt="Descripción de la imagen">
+                <img src="public/assets/images/funcion1.jpeg" alt="Descripción de la imagen">
                 <p class="subtitulo">Poder ubicar Establecimientos  cercanos por medio de Maps</p>
                 <p class="p2">Solo se consideran establecimientos registrados a los que se podra acceder a su informacion.</p>
                 <p class="texto-expandible p2">Texto expandibleeeeeeeeeeeeeee</p>
                 <p class="boton-expandir">Leer mas</p>
             </div>
             <div class="card">
-                <img src="img/funcion1.jpeg" alt="Descripción de la imagen">
+                <img src="public/assets/images/funcion1.jpeg" alt="Descripción de la imagen">
                 <p class="subtitulo">Poder ubicar Establecimientos  cercanos por medio de Maps</p>
                 <p class="p2">Solo se consideran establecimientos registrados a los que se podra acceder a su informacion.</p>
                 <p class="texto-expandible p2">Texto expandibleeeeeeeeeeeeeee</p>
