--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@ gtag('config', 'G-NL97V6G5EJ');
         <a href="#servicios">Servicios</a>
         <a href="#about">About Us</a>
         <a href="#contacto">Contactenos</a>
-        <button class="nav-button">Iniciar sesion</button>
-        <button class="nav-button">Registrarse</button>
+        <button class="nav-button" onclick="redirectTologinPage()">Iniciar sesion</button>
+        <button class="nav-button" onclick="redirectToRegisterinPage() ">Registrarse</button>
       </div>  
 </header>
 <body>
