refactor: implementación de imágenes

--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@ gtag('config', 'G-NL97V6G5EJ');
                             </div>
                         </div>
                         <div class="card-content">
-                            <h2 class="name">Harry kane</h2>
+                            <h2 class="name">Darwin Villavicencio</h2>
                             <p class="description">
                                 ¿Es posible comunicarse con las librerias para realizar pedidos por la plataforma?
                             <br>
@@ -215,7 +215,7 @@ gtag('config', 'G-NL97V6G5EJ');
                             </div>
                         </div>
                         <div class="card-content">
-                            <h2 class="name">David Dell</h2>
+                            <h2 class="name">Isabela Quintanilla</h2>
                             <p class="description">
                                 ¿Se puede aplicar su uso en una biblioteca con sus respectivas funciones?
                             <br>
@@ -230,11 +230,11 @@ gtag('config', 'G-NL97V6G5EJ');
                         <div class="image-content">
                             <span class="overlay"></span>
                             <div class="card-image">
-                                <!--<img src="images/profile3.jpg" alt="" class="card-img">-->
+                                <img src="public/assets/images/persona3.jpg" alt="" class="card-img">
                             </div>
                         </div>
                         <div class="card-content">
-                            <h2 class="name"> Ronaldo Luis Nazário</h2>
+                            <h2 class="name"> Ronaldo Luis Nazario</h2>
                             <p class="description">
                             ¿Se puede pedir la coleccion entera de los libros?     
                             <br>
