refactor: implementación de imágenes

--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@ gtag('config', 'G-NL97V6G5EJ');
                             </div>
                         </div>
                         <div class="card-content">
-                            <h2 class="name">Isabela Quintanilla</h2>
+                            <h2 class="name">Isabella Quintanilla</h2>
                             <p class="description">
                                 ¿Se puede aplicar su uso en una biblioteca con sus respectivas funciones?
                             <br>
@@ -249,16 +249,16 @@ gtag('config', 'G-NL97V6G5EJ');
                         <div class="image-content">
                             <span class="overlay"></span>
                             <div class="card-image">
-                                <!--<img src="images/profile4.jpg" alt="" class="card-img">-->
+                                <img src="public/assets/images/persona4.jpg" alt="" class="card-img">
                             </div>
                         </div>
                         <div class="card-content">
-                            <h2 class="name"> L.A. Messi Cuccittini </h2>
+                            <h2 class="name"> Leo Castañeda </h2>
                             <p class="description">
-                                ¿tendran la opcion de delivery a la casa?
+                                ¿Tendran disponible la opcion de delivery a la casa?
                                 <br>
                                 <br>
-                             -Querido leo, de parte del staff le mandamos la coleccion de los libros que desee gratis.                            
+                             -Querido Leo, de parte del staff le mandamos la coleccion de los libros que desee gratis.                            
                             </p>
                             
                             <button class="nav-button">leer mas</button>
@@ -269,16 +269,16 @@ gtag('config', 'G-NL97V6G5EJ');
                         <div class="image-content">
                             <span class="overlay"></span>
                             <div class="card-image">
-                                <!--<img src="images/profile5.jpg" alt="" class="card-img">-->
+                                <img src="public/assets/images/persona5.jpg" alt="" class="card-img">
                             </div>
                         </div>
                         <div class="card-content">
-                            <h2 class="name"> Ricardo Gareka </h2>
+                            <h2 class="name"> Agustina Gonzales </h2>
                             <p class="description">
-                                ¿Tienen operaciones en chile?
+                                ¿Tienen operaciones en Arequipa?
                                 <br>
                                 <br>
-                                -Correcto, tenemos presencia en chile.
+                                -Correcto, tenemos cobertura en la provincia de Arequipa.
                             </p>
                             <button class="nav-button">leer mas</button>
                         </div>
