refactor: normalizacion de los botones con direccion

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@ gtag('config', 'G-NL97V6G5EJ');
             <p2 class="p2">Hacer mas facil el acceso a la lectura</p2>
         </div>
         <div class="centered-content">
-            <button class="nav-button nav-button-variant ">Ver mas</button>
+            <button onclick="scrollToElement('servicios')" class="nav-button nav-button-variant ">Ver mas</button>
         </div>
     </div>
     <div class="inicio-derecha">
@@ -105,7 +105,7 @@ gtag('config', 'G-NL97V6G5EJ');
         </ul>
     </div>
     <div class="servicios-content">
-        <button class="nav-button">Unirse ya!</button>
+        <button onclick="scrollToElement('contacto')" class="nav-button">Unirse ya!</button>
     </div>
     </div>
     
@@ -142,7 +142,7 @@ gtag('config', 'G-NL97V6G5EJ');
             <img src="public/assets/images/appstore-logo.png" alt="appstore-logo">
         </div>
         <div class="imagen-plataformas">
-            <img src="public/assets/images/qrll.png" alt=""> 
+            <img src="public/assets/images/LibreLocus-QR.png" alt=""> 
         </div>
     </div>
     </div> 
@@ -176,7 +176,7 @@ gtag('config', 'G-NL97V6G5EJ');
             </div>
         </div>
         <div class="cards-container">
-            <button class="nav-button">Ver mas</button>
+            <button onclick="scrollToElement('inicio')" class="nav-button">Ver mas</button>
         </div>
     </div>
     
@@ -330,7 +330,7 @@ gtag('config', 'G-NL97V6G5EJ');
     <div class="footer-content">
         <div class="footer-section about">
             <h2>Sobre Nosotros</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer nec odio. Praesent libero. Sed cursus ante dapibus diam.</p>
+            <p>Somos un grupo apasionado que busca fomentar la lectura tradicional con soluciones tecnologicas</p>
         </div>
         <div class="footer-section links">
             <h2>Enlaces Rápidos</h2>
@@ -343,12 +343,12 @@ gtag('config', 'G-NL97V6G5EJ');
         </div>
         <div class="footer-section contact">
             <h2>Contacto</h2>
-            <p>Email: info@example.com</p>
-            <p>Teléfono: +123 456 7890</p>
+            <p>Email: LibreLocusInfo@hotmail.com</p>
+            <p>Teléfono: +51 953 901 312</p>
         </div>
     </div>
     <div class="footer-bottom">
-        &copy; 2024 TuSitioWeb.com | Diseñado por TuNombre
+        &copy; 2024 LibreLocus.com | Diseñado por LibreLocus Team Development
     </div>
 </footer>
 
